@@ -2,7 +2,7 @@
 # Make sure that the latest code is installed
 
 command_latestcode() {
-   poetry install --only-root >/dev/null
+   poetry install --only-root --all-extras >/dev/null
    if [ $? != 0 ]; then
       echo "*** Failed to install the latest code"
       exit 1
