@@ -1,5 +1,6 @@
 Version 0.1.17     unreleased
 
+	* Convert to latest readthedocs.io standard.
 	* Adjust GHA build to run MacOS and Windows tests only on latest Python.
 
 Version 0.1.16     24 Oct 2022
